# ChallongeLib

./: CMakeLists.txt  README.md
src/: Client.cpp  Client.hpp  Exceptions.hpp  JsonUtils.cpp  JsonUtils.hpp  Match.cpp  Match.hpp  Participant.cpp  Participant.hpp  SecuredSocket.cpp  SecuredSocket.hpp  Socket.cpp  Socket.hpp  Time.cpp  Time.hpp  Tournament.cpp  Tournament.hpp  json.hpp
test/: main.cpp
